	(tinydebian-emacs-bts-bug-url-compose): New.
	(tinydebian-:emacs-bts-url-http-bugs): New.
	(tinydebian-bug-url-forward): New.
	(tinydebian-bug-browse-url-main): New.
	(tinydebian-bug-browse-url-run): New.
	(tinydebian-bug-url-current-buffer): Use
	`tinydebian-url-debian-bugs'.
	(tinydebian-url-debian-bugs): Move location.
	(tinydebian-bts-mode): Change key 'b' to run generic
	`tinydebian-bug-browse-url-main' which works almost for any bug.x
	(tinydebian-bts-email-compose): Change bts-type test to string.
	(tinydebian-bts-generic-email-compose-1): Set  BTS type to
	string, not symbol.
	(tinydebian-bts-generic-email-compose): Set  BTS type to
	string, not symbol.
	(tinydebian-bug-ask-bts-and-number): New.
	(tinydebian-bts-url-bug-compose): New.
	(tinydebian-launchpad-url-package-bugs): New.
	(tinydebian-bug-url-current-buffer): Simplify. Use
	`tinydebian-launchpad-url-package-bugs'.
	(tinydebian-bug-ask-url-for-bts-and-number): New.
	(tinydebian-bug-bts-type-determine): New.
	(tinydebian-debian-bug-bts-type-p): New.
	(tinydebian-debian-bts-url-compose): New.
	(tinydebian-gnome-bug-type-p): New.
	(tinydebian-bug-gnu-savannah-buffer-url-p): Improve regexp.

2009-09-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-url-current-buffer): Renamed.
	(tinydebian-bug-url): New. Call `tinydebian-bug-url-current-buffer'.
	(tinydebian-bug-gnu-savannah-site-support-p): Add nongnu.org site
	regexp.

2009-09-10  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-find-function-list): Correct indentation.
	(tinylisp-get-buffer-create): New.

2009-09-09  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-system-info-os-architecture):
	Use --print-architecture instead of obsolete
	--print-installation-architecture.
	(tinydebian-bug-system-info-os): Check empty locale.
	(tinydebian-bug-system-info-locale): Add LANG.
	(tinydebian-bug-system-info-os-version): Do not
	return any default value.